--- a/_posts/2020-02-17-devlog.md
+++ b/_posts/2020-02-17-devlog.md
@@ -48,3 +48,4 @@ This article lists out all the possible ways you could go about this https://nor
 
 * Dive deep into Django channels
 * Read up on Django REST framework
+* Honestly the first thing I need to do for tomorrow is to look into all the event driven tech and see which one works well for our use case.
