--- a/_posts/2020-02-20-devlog.md
+++ b/_posts/2020-02-20-devlog.md
@@ -1,13 +1,13 @@
 ---
 layout: "post"
-title: "devlog"
+title: "devlog #4"
 date: "2020-02-20 09:39"
 category:
 ---
 
 I was looking at https://sijinjoseph.com/programmer-competency-matrix/ and I realized I've come a long way. Things I could work on:
 
-* Datastructures: "...Able to explain how hashtables can be implemented and can handle collisions, Priority queues and ways to implement them etc." I do know how to implement a hashtables, a priority queue not so much.
+* Datastructures: "...Able to explain how hashtables can be implemented and can handle collisions, **Priority queues** and ways to implement them etc." I do know how to implement a hashtables, a priority queue not so much.
 * Algorithms: "Tree, Graph, simple greedy and divide and conquer algorithms, is able to understand the relevance of the levels of this matrix."
 * Systems programming: "Basic understanding of compilers, linker and interpreters. Understands what assembly code is and how things work at the hardware level. Some knowledge of virtual memory and paging. Understands kernel mode vs. user mode, multi-threading, synchronization primitives and how they’re implemented, able to read assembly code..."
 * Automated testing: "Has written automated unit tests and comes up with good unit test cases for the code that is being written 	Has written code in TDD manner"
