--- a/_posts/2020-02-21-devlog.md
+++ b/_posts/2020-02-21-devlog.md
@@ -1,6 +1,6 @@
 ---
 layout: "post"
-title: "devlog"
+title: "devlog #5"
 date: "2020-02-21 11:34"
 category:
 ---
@@ -15,4 +15,9 @@ and then use scp to copy the executable.
 
 `scp hello  root@s102:/home/root
 `
-The Go server with https works now all I have to do is to call the C++ code. I've been looking at cgo and swig, they all seem to have a long and complicated process to it. I'm not sure how much space it's going to take in the end but hopefully not too much. THe documentation is not easy to read and there are not a lot of tutorials around with the an updated version or even a tutorial with C++ since most of the tutorials are for C. This is going to take some time and reading but I am sure I can figure it out. 
+The Go server with https works now all I have to do is to call the C++ code. I've been looking at cgo and swig, they all seem to have a long and complicated process to it. I'm not sure how much space it's going to take in the end but hopefully not too much. THe documentation is not easy to read and there are not a lot of tutorials around with the an updated version or even a tutorial with C++ since most of the tutorials are for C. This is going to take some time and reading but I am sure I can figure it out.
+
+This gist has examples on cross compiling between C and Go https://gist.github.com/tejainece/8b243b56f9f1dadfc501#file-cgo2-c
+
+Some more sample C++ with Go projects on github:
+https://github.com/zacg/simplelib
